[package]
name = "natssub"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.41.0"
clap = "4.5.37"
env_logger = "0.11.8"
flate2 = { version = "1.1.1", default-features = false, features = ["rust_backend"] }
log = "0.4.27"
tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3.31"
color-backtrace = "0.7.0"

[profile.release]

[[bin]]
name = "natssub"
path = "src/main.rs"

